--- a/paramlines.tex
+++ b/paramlines.tex
@@ -14,28 +14,37 @@
         \plsetbasex{##1}%%
     }
     \newcommand\pldrawbaselabel[1]{%%
-        \node at (\basex,0.3) {$##1$};%%
+        \node at (\basex,0.3) {##1};%%
     }
-    \newcommand\plparam[1]{%%
+    \newcommand\plparamlabel[2]{%%
         \plparambase{##1}%%
-        \pldrawbaselabel{##1}%%
+        \pldrawbaselabel{##2}%%
         \draw (\basex,0) --+ (0,{-(#1)});%%
     }
-    \newcommand\plparaminv[1]{%%
+    \newcommand\plparam[1]{%%
+        \plparamlabel{##1}{$##1$}%%
+    }
+    \newcommand\plparaminvlabel[2]{%%
         \plparambase{##1’}%%
-        \pldrawbaselabel{##1}%%
+        \pldrawbaselabel{##2}%%
         \node [not gate US,draw,rotate=270] at (\basex,-1) (not##1’){};%%
         \draw (\basex,0) -- (not##1’.input);%%
         \draw (not##1’.output) -- (\basex,{-(#1)});%%
     }
-    \newcommand\plparamboth[1]{%%
+    \newcommand\plparaminv[1]{%%
+        \plparaminvlabel{##1}{$##1$}%%
+    }
+    \newcommand\plparambothlabel[2]{%%
         \plparambase{##1}%%
-        \pldrawbaselabel{##1}%%
+        \pldrawbaselabel{##2}%%
         \draw (\basex,0) --+ (0,{-(#1)});%%
         \node [not gate US,draw,rotate=270] at ({\basex+#2},-1) (not##1){};%%
         \draw (\basex,-0.5)-|(not##1.input);%%
         \draw (not##1.output)--({\basex+#2},{-(#1)});%%
         \plparamdef{##1’}%%
+    }
+    \newcommand\plparamboth[1]{%%
+        \plparambothlabel{##1}{$##1$}%%
     }
     \newcommand\pllink[2]{%%
         \plsetbasex{##1}%%
