--- a/memo2.tex
+++ b/memo2.tex
@@ -452,7 +452,7 @@ y&=(x+1)(x-1)\\
 
 \section{图片}
 
-\subsection{位图、矢量图、PDF}
+\subsection{嵌入位图、矢量图、PDF}
 
 \begin{lstlisting}[style=customlatex,style=linewrap,frame=single]
 \usepackage{graphicx}
@@ -461,7 +461,24 @@ y&=(x+1)(x-1)\\
 \includegraphics[width=1\linewidth]{example.pdf}
 \end{lstlisting}
 
-%长图，图表标题
+\subsection{图表标题}
+
+\begin{lstlisting}[style=customlatex,style=linewrap,frame=single]
+% 引言区
+\usepackage{caption}
+\captionsetup[figure]{name=图}
+\captionsetup[table]{name=表}
+\renewcommand{\contentsname}{\centering 目录}
+\begin{figure}[]
+    \centering
+    \includegraphics[width=1\linewidth]{example.png}
+    \caption{Foo}
+    \label{fig:foo}
+\end{figure}
+\end{lstlisting}
+
+
+% TODO: 长图
 
 \section{表格\ \tagLaTeX}
 
