misplaced quote, small caps translation

--- a/memo2.tex
+++ b/memo2.tex
@@ -172,7 +172,7 @@ The quick fox jumps over the lazy dog. % 正文
     \item 引擎根据令牌序列输出结果。
 \end{enumerate}
 
-在令牌化过程中，单个空格、多个空格或者单个换行符会被看作一个空格令牌，多个换行符会被看做换行令牌。但是控制字\footnote{Control Word，由反斜杠和字母序列组成，例如“\texttt{\backslash LaTeX}，是控制序列的一种。”}末尾的空格字符会被忽略，不会作为空格令牌。还需加上“\texttt{\backslash}\lstinline[showspaces=true]{ }”来插入一个控制空格。控制换行符可以通过“\texttt{\backslash\backslash}”插入
+在令牌化过程中，单个空格、多个空格或者单个换行符会被看作一个空格令牌，多个换行符会被看做换行令牌。但是控制字\footnote{Control Word，由反斜杠和字母序列组成，例如“\texttt{\backslash LaTeX}”，是控制序列的一种。}末尾的空格字符会被忽略，不会作为空格令牌。还需加上“\texttt{\backslash}\lstinline[showspaces=true]{ }”来插入一个控制空格。控制换行符可以通过“\texttt{\backslash\backslash}”插入
 
 \begin{LTXexample}[style=customlatex]
 \LaTeX       without space\\
@@ -249,7 +249,7 @@ The quick fox jumps over the lazy dog. % 正文
 \setmainfont[AutoFakeSlant=0.2, AutoFakeBold=1.5]{Source Han Serif SC}
 \end{lstlisting}
 
-设置小写大写字母替代
+以及设置小型大写字母替代字体
 
 \begin{lstlisting}[frame=single,style=customlatex]
 \setmainfont[
